--- a/.gitignore
+++ b/.gitignore
@@ -147,4 +147,5 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+.vscode
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,java,gradle,visualstudiocode
