--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'application'
     id 'com.adarshr.test-logger' version '4.0.0'
     id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 repositories {
@@ -33,6 +34,12 @@ jar {
         attributes(
             'Main-Class': application.mainClass
         )
+    }
+}
+
+shadowJar {
+    manifest {
+        attributes 'Main-Class': application.mainClass
     }
 }
 
